--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -18,6 +18,12 @@ __php_packages:
 __php_webserver_daemon: "httpd"
 
 __php_conf_path: /etc
+php_conf_filename: "php.ini"
+
+# Specific case for the cli configuration
+php_cli_conf_path: "/etc"
+php_cli_conf_filename: "php-cli.ini"
+
 php_extension_conf_path: /etc/php.d
 
 php_apc_conf_filename: apc.ini
